public/stylesheets/widgets.css
/* ... */
.netlogo-switcher {
    display: flex;
    align-items: center;
}

.netlogo-slider {
    padding-left: 3px;
    padding-right: 3px;
}

.netlogo-slider:hover {
    cursor: default;
}

.netlogo-slider input[type=range] {
  background-color: transparent;
  height: 22px;
  margin: 0px;
  margin-bottom: -5px;
  margin-top: 2px;
  padding: 0px;
  width: 100%;
}

.netlogo-label {
  margin: 0 auto;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.netlogo-slider-label {
  display: flex;
  justify-content: space-between;
}

.netlogo-slider-label .netlogo-label {
  flex: 1 1 auto;
  min-width: 0;
}

.netlogo-slider-label .netlogo-slider-value {
  flex: 0 0 auto;
}

.netlogo-slider-label input[type=number] {
    margin: 0px;
    border: 1px;
    padding: 0px;
}

.netlogo-monitor {
    padding: 2px 4px;
    display: flex;
    flex-flow: column;
    justify-content: space-around;
}

.netlogo-monitor > .netlogo-value {
  background-color: white;
  min-height: 11px;
  padding: 2px 2px;
}

.netlogo-value {
    overflow: hidden;
}

.netlogo-code {
  border: 1px solid black;
}

.netlogo-code-tab {
  height: 500px;
}

.netlogo-input-box {
    padding: 2px 4px;
    display: flex;
    flex-flow: column;
    justify-content: space-around;
}

.netlogo-multiline-input {
  flex-grow: 1;
  margin:    4px;
  resize:    none;
}

.netlogo-chooser {
    padding: 2px 4px;
    display: flex;
    flex-flow: column;
    justify-content: space-around;
}

.netlogo-plot {
    box-sizing: content-box; /* otherwise border gets cut off -- BCH 11/9/2014 */
    border: 1px solid black;
    overflow: visible; /* must come after the .netlogo-widget declaration - JMB November 2017 */
}

.highcharts-container {
  overflow: visible !important; /* Let our context-menus be free - JMB November 2017 */
}

.netlogo-forever-button > input {
    display: none;
}

.netlogo-subheader {
  align-items: center;
  display: flex;
  flex-flow: column;
  flex-grow: 0;
  white-space: nowrap;
}

.netlogo-export-wrapper {
  align-items: center;
  display: flex;
  flex-grow: 0;
  white-space: nowrap;
}

.netlogo-widget-error {
  color: red;
}

.netlogo-widget-error:hover {
  cursor: pointer;
}

.CodeMirror {
  height: auto;
}

.CodeMirror-scroll.cm-disabled {
  background-color: #ebebe4;
}

